# mtspread

./: .editorconfig  README.md  make.bat  pyproject.toml
mtspread/: cli.py  spread.py
spread/: cli.py  spread.py
tests/: test_cli.py  test_spread.py
